--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(type='text/javascript', src="https://code.jquery.com/jquery-1.11.3.min.js")
+    script(type='text/javascript', src="scripts.js")
   body
     block content
